Description
1. Install "ReactOS JPN Package" from rapps and make ReactOS Japanese.
2. Open Command Prompt.
3. Type DIR /W and Enter key.
4. DIR command doesn't consider double-width characters.
with-jpn-package.png
Attachments
Issue Links
- blocks
- 
                    CORE-18950 ReactOS Chinese support -         
- Untriaged
 
-         
- 
                    CORE-18706 Japanese translation/localization -         
- Untriaged
 
-         
- is blocked by
- 
                    CORE-12748 Create the CJK Package (optional) -         
- Untriaged
 
-         
- 
                    CORE-12451 Console: Support East-Asian characters -         
- Reopened
 
-         
