base/shell/cmd/console.h
@@ -96,3 +96,12 @@ BOOL ConSetScreenColor(HANDLE hOutput, WORD wColor, BOOL bFill);
 
 // INT FilePromptYN (UINT);
 // INT FilePromptYNA (UINT);
+
+SIZE_T ConGetTextWidthA(PCSTR pszText);
+SIZE_T ConGetTextWidthW(PCWSTR pszText);
+
+#ifdef UNICODE
+    #define ConGetTextWidth ConGetTextWidthW
+#else
+    #define ConGetTextWidth ConGetTextWidthA
+#endif
